# OpenGLES3-Experiments

10-fbx-loader/: CMakeLists.txt
10-fbx-loader/FSGL/src/Controller/: FSGLController.cpp  FSGLController.h
10-fbx-loader/FSGL/src/Data/Mesh/: FSGLMesh.h
10-fbx-loader/FSGL/src/Data/Model/: FSGLModel.h
10-fbx-loader/FSGL/src/Data/Vector/: FSGLVector.h
10-fbx-loader/data/models/skinnedCube/: skinnedCube.blend  skinnedCube.blend1  skinnedCube.fbx  skinnedCube.gltf  skinnedCube.mtl
10-fbx-loader/fbxloader/: main.cpp
11-serializable/: CMakeLists.txt  cube.fso
12-skinning/: .directory  CMakeLists.txt  SaberPlusProject.spproject  cube.fso
12-skinning/FSGL/src/Core/: FSGLCore.cpp
12-skinning/FSGL/src/Data/Animation/: FSGLAnimation.cpp  FSGLAnimation.h
12-skinning/FSGL/src/Data/Bone/: FSGLBone.cpp  FSGLBone.h
12-skinning/FSGL/src/Data/Camera/: FSGLCamera.cpp
12-skinning/FSGL/src/Data/Material/: FSGLMaterial.h
12-skinning/FSGL/src/Data/Matrix/: FSGLMatrix.cpp
12-skinning/FSGL/src/Data/Mesh/: FSGLMesh.cpp  FSGLMesh.h
12-skinning/data/models/durotan/: Durotan.mtl  DurotanCredits.txt
12-skinning/data/models/skinnedCube/: original_skinnedCube.fbx  skinnedCube.blend  skinnedCube.blend1  skinnedCube.fbx  skinnedCube.mtl  skinnedCube2.blend  skinnedCube2.blend1  skinnedCubeExtended.blend  skinnedCubeExtendedPosed.blend  skinnedCubeExtendedPosed.fbx
12-skinning/skinning/: main.cpp
7-sdl-gles-obj-textured-assimp/: CMakeLists.txt  main.cpp
7-sdl-gles-obj-textured-assimp/FSGL/Core/: FSGLCore.cpp
7-sdl-gles-obj-textured-assimp/FSGL/Data/Model/: FSGLModel.h
(+145 files in other folders)
